using Java Base64 encoder instead of sun's encoder, added password generation by providing the mac address as command line argument for testing purposes